@@ -84,6 +84,10 @@ Debugging
 -------------------------
  * Core Show Locks output now includes Thread/LWP ID if the platform
    supports this feature.
+ * New "logger add channel" and "logger remove channel" CLI commands have
+   been added to allow creation and deletion of dynamic logger channels
+   without configuration changes. These dynamic logger channels will only
+   exist until the next restart of asterisk.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 12.0.0 to Asterisk 12.1.0 ------------
